--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
 </head>
 <body>
     <h1>Tiramisu</h1>
-    <table>
-        <tr align="right"><td>Buy on Amazon</td></tr>
-        <tr>
-        <td><p><em>Posted on December 11 2022 / posted in <a href="https://www.instructables.com/No-Bake-Tiramisu-Recipe/">Instructables</a></em></p></td>
-        </tr>
-    </table>
-    
-    <br>
-    <table>
-        <tr>
-            <td><img src="foto1.PNG" width="450 px" alt=""></td>
-            <td><img src="foto2.PNG" width="450 px" alt=""></td>
-            <td><img src="foto3.PNG" width="450 px" alt=""></td>
-        </tr>
-    </table>
+<table>
+    <tr align="end"><td><a href="https://www.amazon.com/tiramisu/s?k=tiramisu">Buy on Amazon</a> </td></tr>
+    <tr>
+    <td><p><em>Posted on December 11 2022 / posted in <a href="https://www.instructables.com/No-Bake-Tiramisu-Recipe/">Instructables</a></em></p></td>
+    </tr>
+    <tr>
+        <td><img src="foto1.PNG" width="450 px" alt=""></td>
+        <td><img src="foto2.PNG" width="450 px" alt=""></td>
+        <td><img src="foto3.PNG" width="450 px" alt=""></td>
+    </tr>
+</table>
     <p><strong>Tiramisu</strong>  is the legendary mystical dessert that can turn a relatively normal person into a simpering love slave with just one bite.  Not for the faint of heart, this tiramisu recipe is just as epic as you could imagine, and requires no baking whatsoever.  Perfect for any time of year!  I entrust you with this recipe, knowing that you will use it wisely and carefully.  </p>
     <p>When I worked in an Italian family restaurant in the North End of Boston, I remember the owner, Arturo, coming in to make his famous tiramisu for the week.  The first thing he did was soak the ladyfingers in espresso and amaretto and let them sit before going to work on the perfect custard.  He also knew that a real tiramisu needed at least 24 hours to come together, and was even better after a few days.  Any less time didn't allow the flavors to mingle enough to give the dessert the legendary taste and texture it's known for.</p>
     <br>
@@ -48,12 +44,12 @@
 
 <h3>Common Tiramisy Questions- Answered</h3>
 <p><strong>What kind of rum do I use in Tiramisu?</strong> </p>
-<p>&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
 <p><strong>What kind of rum do I use in Tiramisu?</strong> </p>
-<p>&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
 <p><strong>What kind of rum do I use in Tiramisu?</strong> </p>
-<p>&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
 <p><strong>What kind of rum do I use in Tiramisu?</strong> </p>
-<p>&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Dark rum is best, but you can use brandy of your favorite cofee liquer.</p>
 </body>
 </html>
