--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Tiramisu</h1>
+    <p style="text-align: end;"><a  href="https://www.amazon.com/tiramisu/s?k=tiramisu">Buy on Amazon</a></p>
 <table>
-    <tr align="end"><td><a href="https://www.amazon.com/tiramisu/s?k=tiramisu">Buy on Amazon</a> </td></tr>
     <tr>
     <td><p><em>Posted on December 11 2022 / posted in <a href="https://www.instructables.com/No-Bake-Tiramisu-Recipe/">Instructables</a></em></p></td>
     </tr>
